--- a/public/admin/layouts/layout2/css/custom.css
+++ b/public/admin/layouts/layout2/css/custom.css
@@ -1,1 +1,7 @@
 /* here you can put your own css to customize and override the theme */
+.center-cropped {
+    width: 100px;
+    height: 100px;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
